overflow bug fixed

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,8 +7,7 @@ body {
     font-optical-sizing: auto;
     font-weight: 500;
     font-style: normal;
-    overflow-x: hidden;
-    overflow-y: auto;
+    
 }
 
 
